[package]
name = "evm"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.7.0"
path-clean = "0.1.0"
sdl2 = { git = "https://github.com/JustAGod1/rust-sdl2.git", features = ["bundled"] }
gl = "0.10.0"
imgui-sdl2 = { git = "https://github.com/JustAGod1/rust-imgui-sdl2.git"}
imgui-opengl-renderer = "0.11.0"
nfd = { git = "https://github.com/saurvs/nfd-rs.git" }


[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]