[package]
name = "bevm"
version = "0.1.0"
edition = "2018"
license-file="LICENSE"
description="Emulator of Basic EVM for itmo students"
keywords = ["emulator", "education", "asm", "itmo", "basepc"]
categories = ["emulators"]
homepage = "https://github.com/JustAGod1/bevm"
repository = "https://github.com/JustAGod1/bevm"
build = "build.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
path-clean = "1.0.1"
sdl2 = { version = "0.35.2", features = ["bundled"] }
gl = "0.10.0"
imgui-sdl2 = "0.15.1"
imgui = "0.9.0"
imgui-opengl-renderer = "0.12.0"
rfd = "0.11.3"

[[bin]]
name = "bevm"
path="src/main.rs"